--- a/playbook.yaml
+++ b/playbook.yaml
@@ -6,3 +6,6 @@
     tasks:
       - name: Install packages
         import_tasks: tasks/install_packages.yaml
+    tasks:
+      - name: Copy configurations
+        import_tasks: tasks/copy_configuration.yaml
