--- a/tasks/copy_configuration.yaml
+++ b/tasks/copy_configuration.yaml
@@ -5,3 +5,11 @@
     owner: ersandro
     group: ersandro
     mode: u=rw,g=r,o=r
+
+- name: copy Alacritty config file
+  copy:
+    src: files/alacritty.yml
+    dest: /home/ersandro/.config/alacritty.yml
+    owner: ersandro
+    group: ersandro
+    mode: u=rw,g=r,o=r
