--- a/tasks/copy_configuration.yaml
+++ b/tasks/copy_configuration.yaml
@@ -17,7 +17,7 @@
 - name: copy nitrogen last wallpaper config
   copy:
     src: files/bg-saved.cfg
-    dest: /home/ersandro/nitrogen/bg-saved.cfg
+    dest: /home/ersandro/.config/nitrogen/bg-saved.cfg
     owner: ersandro
     group: ersandro
     mode: u=rw,g=r,o=r
